--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>Home</title>
 </head>
 <body>
-    <nav style=" display: flex;
-    justify-content: space-between;">
+    <nav>
         |<a href="./index.html">Home</a> |
         <a href="./biography.html">Biography</a> |
         <a href="./achievements.html">Achievements</a> |
@@ -17,9 +16,9 @@
     <section>
     <br> <br> <br> <br>  
     <article> 
-        <h1 style="font-size: 50px;">Who Is Novak Djokovic ?</h1>
-        <aside ><img src="./images/main-img.png"style="float : right"></aside>
-        <p style="width: 70%;font-size:25px">
+        <h1>Who Is Novak Djokovic ?</h1>
+        <aside ><img src="./images/main-img.png"></aside>
+        <p>
             He is one of the most popular and greatest tennis 
             players of all times , born May 22, 1985 in Serbia.He stands upon tennis legends 
             and has broken major records that stand till this day in the open Era.
@@ -28,7 +27,7 @@
         </p>
     </article>    
     </section>
-    <footer style=" position:absolute; bottom:0; width:100%; text-align:center;">
+    <footer>
         <hr>
         <br>
         <a href="https://fr.wikipedia.org/wiki/Novak_Djokovic">learn more about Novak Djokovic here</a>
