--- a/rivals.html
+++ b/rivals.html
@@ -8,8 +8,7 @@
 </head>
 <body>
  <div>
-    <nav style=" display: flex;
-    justify-content: space-between;">
+    <nav>
         |<a href="./index.html">Home</a> |
         <a href="./biography.html">Biography</a> |
         <a href="./index.html">Achievements</a> |
@@ -18,23 +17,18 @@
     <br> <br> <br> <br> <br>
     <article> 
         <h1 style="font-size: 50px;">The legendary rivalery between the big 3</h1>
-        <aside ><img src="./images/big3.png" width="500px " style="float : right"></aside>
-        <p style="width: 70%;font-size:25px">
+        <aside ><img src="./images/big3.png" width="500px " ></aside>
+        <p>
                 Novak Djokovic is consider among the big 3, the best 3 tennis players of thr 21st centuries and they shares together 
             an astonishing 62 grand slams titles.
                 However, Djokovic is the only of the big 3 to have more wins against both Rafael Nadal and Roger Federer,
                 He is the only player to have defeated Nadal twice at Roland Garros
         </p>
-    </article>    <footer style=" position:absolute; bottom:0; width:100%; text-align:center;">
+    </article>    <footer>
         <hr>
         <br>
         <a href="https://fr.wikipedia.org/wiki/Novak_Djokovic">learn more about Novak Djokovic here</a>
     </footer> 
-    <footer style=" position:absolute; bottom:0; width:100%; text-align:center;">
-        <hr>
-        <br>
-        <a href="https://fr.wikipedia.org/wiki/Novak_Djokovic">learn more about Novak Djokovic here</a>
-    </footer>
  </div>
 </body>
 </html>
