--- a/achievements.html
+++ b/achievements.html
@@ -7,8 +7,7 @@
     <title> Achievements</title>
 </head>
 <body>
-    <nav style=" display: flex;
-    justify-content: space-between;">
+    <nav>
         |<a href="./index.html">Home</a> |
         <a href="./biography.html">Biography</a> |
         <a href="./index.html">Achievements</a> |
@@ -17,8 +16,8 @@
     <br> <br> <br> <br> <br>
     <div>
         <article> 
-            <h1 style="font-size: 50px;">Tennis carrer</h1>
-            <aside ><img src="./images/biography.jpg" width="500px " style="float : right"></aside>
+            <h1>Tennis carrer</h1>
+            <aside ><img src="./images/biography.jpg" width="500px " ></aside>
             <p style="width: 70%;font-size:25px">
             Novak Djokovic has achieved some astonishing career records standing with 20 grand slams titles of which 
             9 Austrilian open titles, 6 wimbledon titles , 3 us open titles and 2 roland garros ones
@@ -28,10 +27,10 @@
     </div>
     <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
     <div>
-        <aside ><img src="./images/list.jpg" width="500px " style="float : right"></aside>
+        <aside ><img src="./images/list.jpg" width="500px " ></aside>
         <article>
-            <h3 style="font-size: 30px;">Most important records and titles</h3>
-                <ul style="font-size: 25px;">
+            <h3>Most important records and titles</h3>
+                <ul>
                     <li> 20 grand slams </li>
                     <li> 373 weeks as number 1 in atp ranking</li>
                     <li> more than 1000 career wins</li>
@@ -40,7 +39,7 @@
                 </ul>
         </article>
     </div>
-    <footer style=" position:absolute; bottom:0; width:100%; text-align:center;">
+    <footer>
         <hr>
         <br>
         <a href="https://fr.wikipedia.org/wiki/Novak_Djokovic">learn more about Novak Djokovic here</a>
