--- a/achievements.html
+++ b/achievements.html
@@ -39,7 +39,7 @@
                 </ul>
         </article>
     </div>
-    <footer>
+    <footer style=" position:absolute; bottom:0; width:100%; text-align:center;">
         <hr>
         <br>
         <a href="https://fr.wikipedia.org/wiki/Novak_Djokovic">learn more about Novak Djokovic here</a>
