--- a/rivals.html
+++ b/rivals.html
@@ -16,7 +16,7 @@
     </nav>
     <br> <br> <br> <br> <br>
     <article> 
-        <h1 style="font-size: 50px;">The legendary rivalery between the big 3</h1>
+        <h1>The legendary rivalery between the big 3</h1>
         <aside ><img src="./images/big3.png" width="500px " ></aside>
         <p>
                 Novak Djokovic is consider among the big 3, the best 3 tennis players of thr 21st centuries and they shares together 
