--- a/biography.html
+++ b/biography.html
@@ -7,8 +7,7 @@
     <title>Biography</title>
 </head>
 <body>
-    <nav style=" display: flex;
-    justify-content: space-between;">
+    <nav >
         |<a href="./index.html">Home</a> |
         <a href="./biography.html">Biography</a> |
         <a href="./index.html">Achievements</a> |
@@ -16,14 +15,14 @@
     </nav>
     <br> <br> <br> <br> <br>
     <article> 
-        <h1 style="font-size: 50px;">Biography</h1>
-        <aside ><img src="./images/biography.jpg" width="500px " style="float : right"></aside>
-        <p style="width: 70%;font-size:25px">
+        <h1>Biography</h1>
+        <aside ><img src="./images/biography.jpg" width="500px "></aside>
+        <p >
             Djokovic began playing tennis at the age of four,[17] after his parents gave him a mini-racket and a soft foam ball, which his father claimed became "the most beloved toy in his life".[18] His parents then sent him to a tennis camp in Novi Sad.[18][19] In the summer of 1993, as a six-year-old, he was sent to a tennis camp organized by the Teniski Klub Partizan[19] and overseen by Yugoslav tennis player Jelena Genčić[20] at Mount Kopaonik, where Djokovic's parents ran a fast-food parlour[21] and a sports equipment business.[18] Upon seeing the child Djokovic playing tennis, 
             she stated: "This is the greatest talent I have seen since Monica Seles."[19]
         </p>
-    </article> *
-    <footer style=" position:absolute; bottom:0; width:100%; text-align:center;">
+    </article> 
+    <footer >
         <hr>
         <br>
         <a href="https://fr.wikipedia.org/wiki/Novak_Djokovic">learn more about Novak Djokovic here</a>
