--- a/biography.html
+++ b/biography.html
@@ -16,7 +16,7 @@
     <br> <br> <br> <br> <br>
     <article> 
         <h1>Biography</h1>
-        <aside ><img src="./images/biography.jpg" width="500px "></aside>
+        <aside ><img src="./images/biography.jpg" width="400px" alt="Djokovic Holding a racket"></aside>
         <p >
             Djokovic began playing tennis at the age of four,[17] after his parents gave him a mini-racket and a soft foam ball, which his father claimed became "the most beloved toy in his life".[18] His parents then sent him to a tennis camp in Novi Sad.[18][19] In the summer of 1993, as a six-year-old, he was sent to a tennis camp organized by the Teniski Klub Partizan[19] and overseen by Yugoslav tennis player Jelena Genčić[20] at Mount Kopaonik, where Djokovic's parents ran a fast-food parlour[21] and a sports equipment business.[18] Upon seeing the child Djokovic playing tennis, 
             she stated: "This is the greatest talent I have seen since Monica Seles."[19]
