--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <br> <br> <br> <br>  
     <article> 
         <h1>Who Is Novak Djokovic ?</h1>
-        <aside ><img src="./images/main-img.png" alt="Novak Djokovic"></aside>
+        <aside ><img src="./images/main-img.png" alt="Novak Djokovic" width="300px"></aside>
         <p>
             He is one of the most popular and greatest tennis 
             players of all times , born May 22, 1985 in Serbia.He stands upon tennis legends 
