--- a/rivals.html
+++ b/rivals.html
@@ -17,7 +17,7 @@
     <br> <br> <br> <br> <br>
     <article> 
         <h1>The legendary rivalery between the big 3</h1>
-        <aside ><img src="./images/big3.png" width="500px " ></aside>
+        <aside ><img src="./images/big3.png" width="500px " alt="an image showing djokovic,nadal and federer" ></aside>
         <p>
                 Novak Djokovic is consider among the big 3, the best 3 tennis players of thr 21st centuries and they shares together 
             an astonishing 62 grand slams titles.
