--- a/achievements.html
+++ b/achievements.html
@@ -17,8 +17,8 @@
     <div>
         <article> 
             <h1>Tennis carrer</h1>
-            <aside ><img src="./images/biography.jpg" width="500px " ></aside>
-            <p style="width: 70%;font-size:25px">
+            <aside ><img src="./images/biography.jpg" width="500px" ></aside>
+            <p >
             Novak Djokovic has achieved some astonishing career records standing with 20 grand slams titles of which 
             9 Austrilian open titles, 6 wimbledon titles , 3 us open titles and 2 roland garros ones
             </p>
@@ -39,7 +39,7 @@
                 </ul>
         </article>
     </div>
-    <footer style=" position:absolute; bottom:0; width:100%; text-align:center;">
+    <footer>
         <hr>
         <br>
         <a href="https://fr.wikipedia.org/wiki/Novak_Djokovic">learn more about Novak Djokovic here</a>
