--- a/rivals.html
+++ b/rivals.html
@@ -24,7 +24,8 @@
                 However, Djokovic is the only of the big 3 to have more wins against both Rafael Nadal and Roger Federer,
                 He is the only player to have defeated Nadal twice at Roland Garros
         </p>
-    </article>    <footer>
+    </article>    
+    <footer>
         <hr>
         <br>
         <a href="https://fr.wikipedia.org/wiki/Novak_Djokovic">learn more about Novak Djokovic here</a>
