--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
         <a href="./rivals.html">Rivaleries</a>|
     </nav>
     <section>
-    <br> <br> <br> <br>  
-     <article> 
+        <br> <br> <br> <br>  
+      <article> 
         <h1>Who Is Novak Djokovic ?</h1>
-        <aside ><img src="./images/main-img.png" alt="Novak Djokovic" width="300px" height="300px"></aside>
+        <aside >
+            <img src="./images/main-img.png" alt="Novak Djokovic" width="300px" height="300px"><
+            /aside>
         <p>
             He is one of the most popular and greatest tennis 
             players of all times , born May 22, 1985 in Serbia.He stands upon tennis legends 
@@ -25,7 +27,7 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
         </p>
-     </article>    
+      </article>    
     </section>
     <footer>
         <hr>
